# autorefine

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  handle-task-event  mkdocs.yml  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feedback.yml  functionality.yml
autorefine/: __init__.py  __main__.py  cli.py  settings.py  tools.py
changes/: +ca08318f.changed.md  .gitignore
docs/: api.md  contributing.md  index.md
news/: .gitignore
scripts/: bump.sh  release.py  skeleton.0.0.2rc-101-g44df1e3.bash  skeleton.0.0.2rc-102-g4f21a4e.bash  skeleton.0.0.2rc-103-g3dc95a9.bash  skeleton.0.0.2rc-104-g203a3fa.bash  skeleton.0.0.2rc-105-g12b6954.bash  skeleton.0.0.2rc-106-g72a244e.bash  skeleton.0.0.2rc-131-g4aee5bf.bash  skeleton.0.0.2rc-132-gf51a888.bash  skeleton.0.0.2rc-134-g0ac2307.bash  skeleton.0.0.2rc-166-gf236e83.bash  skeleton.0.0.2rc-180-g2a2d737.bash  skeleton.0.0.2rc-181-g825103e.bash  skeleton.0.0.2rc-210-g3b97536.bash  skeleton.0.0.2rc-214-gf428c12.bash  skeleton.0.0.2rc-215-g792492f.bash  skeleton.0.0.2rc-83-g3b14b33.bash  skeleton.0.0.2rc-87-g35656e9.bash  skeleton.0.0.2rc-88-gf986f00.bash  skeleton.0.0.2rc-89-gaa02725.bash  skeleton.0.0.2rc-90-gb227938.bash  skeleton.0.0.2rc-91-g8cad7da.bash  skeleton.0.0.2rc-92-gcbfb492.bash  skeleton.0.0.2rc-93-g2b0934b.bash  skeleton.0.0.2rc-95-gc735522.bash  skeleton.0bdf6a5.bash  skeleton.e4de851.bash  skeleton.sh
tests/: test_autorefine.py
(+39 files in other folders)
